--- a/.gitignore
+++ b/.gitignore
@@ -25,7 +25,7 @@ local.properties
 *.launch
 
 # CDT-specific
-.cproject
+#.cproject
 
 # PDT-specific
 .buildpath
@@ -357,4 +357,4 @@ build/
 cmake-build-debug/
 cmake-build-release/
 generated.*.ld
-.mxproject
+#.mxproject
